--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,12 @@
 <% provide(:title, 'Home') %>
-<h1>HCMMW</h1>
-<p>
-  This is the home page for the HCMMW.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the HCMMW</h1>
+
+  <h2>
+    This is the home page for the HCMMW.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
