--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,8 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
+          <li><%= link_to "About",   about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
