添加实验的factory和显示页面

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+  <div class="span8">
+    <% if @user.experiments.any? %>
+      <h3>Microposts (<%= @user.experiments.count %>)</h3>
+      <ol class="experiments">
+        <%= render @experiments %>
+      </ol>
+      <%= will_paginate @experiments %>
+    <% end %>
+  </div>
 </div>
