--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,10 @@
           <li><%= link_to "About Us", about_path %></li>
           <li><%= link_to "Contact", contact_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Users", users_path %></li>
+            <% if current_user.admin? %>
+              <li><%= link_to "Users", users_path %></li>
+            <% end %>
+
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
