修改已登录用户的首页标题和页面底部的联系作者鼠标指示

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     HCMMW by
-    <a href="mailto:tangyifei.tang@gmail.com">Eragon Tang</a>
+    <a href="mailto:tangyifei.tang@gmail.com" title="Send email to the author">Eragon Tang</a>
   </small>
   <nav>
     <ul>
