--- a/app/views/shared/_experiment_form.html.erb
+++ b/app/views/shared/_experiment_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for(@experiment) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
+    <%= f.label :description %>
     <%= f.text_field :description, placeholder: "Brief description..." %>
+    <%= f.label :input_file %>
     <%= f.text_field :input_file, placeholder: "Input file..." %>
   </div>
   <%= f.submit "Submit", class: "btn btn-large btn-primary" %>
