--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </aside>
   <div class="span8">
     <% if @user.experiments.any? %>
-      <h3>Microposts (<%= @user.experiments.count %>)</h3>
+      <h3>Experiments (<%= @user.experiments.count %>)</h3>
       <ol class="experiments">
         <%= render @experiments %>
       </ol>
