实验显示页面内容的更改

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -227,6 +227,7 @@ aside {
 
 .tool {
   margin: 0 5px 10px 0;
+  padding: 5px;
   border: 1px solid $grayLighter;
   @include box_radius(5px);
   @include box_sizing;
