--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -14,17 +14,17 @@
       HCMMW uses IOD utility to detect outlier miRNAs with following algorithms:
       <dl class="dl-horizontal">
         <dt>LSOSS</dt>
-        <dd>Least Sum of Ordered Subset Square t-statistic</dd>
+        <dd><b>L</b>east <b>S</b>um of <b>O</b>rdered <b>S</b>ubset <b>S</b>quare t-statistic</dd>
         <dt>MOST</dt>
-        <dd>Maximum Ordered Subset T-statistics </dd>
+        <dd><b>M</b>aximum <b>O</b>rdered <b>S</b>ubset <b>T</b>-statistics </dd>
         <dt>COPA</dt>
-        <dd>Cancer Outlier Profile Analysis</dd>
+        <dd><b>C</b>ancer <b>O</b>utlier <b>P</b>rofile <b>A</b>nalysis</dd>
         <dt>ORT</dt>
-        <dd>Outlier Robust T-statistic</dd>
+        <dd><b>O</b>utlier <b>R</b>obust <b>T</b>-statistic</dd>
         <dt>OS</dt>
-        <dd>Outlier Sum statistic</dd>
+        <dd><b>O</b>utlier <b>S</b>um statistic</dd>
         <dt>T</dt>
-        <dd>student's T-test</dd>
+        <dd>student's <b>T</b>-test</dd>
       </dl>
     </div>
     <div class="tool">
