实验页面超链接更新

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -29,12 +29,12 @@
     </div>
     <div class="tool">
       <h3>Tool 2. Extract targeting genes for outlier miRNAs.</h3>
-      Extract all targeting genes of multiple miRNA from <a href="http://www.targetscan.org/">TargetScan</a>.<br />
-      <span class="label label-info">Heads up!</span>To do this, you should provide <a href="http://www.mirbase.org/">miRBase</a> accession ID for each outlier.
+      Extract all targeting genes of multiple miRNA from <a href="http://www.targetscan.org/" target="_blank">TargetScan</a>.<br />
+      <span class="label label-info">Heads up!</span>To do this, you should provide <a href="http://www.mirbase.org/" target="_blank">miRBase</a> accession ID for each outlier.
     </div>
     <div class="tool">
       <h3>Tool 3. Enrichment analysis.</h3>
-      HCMMW provides a neat way to perform enrichment from <a href="">DAVID</a>. Following terms are supported:
+      HCMMW provides a neat way to perform enrichment from <a href="http://david.abcc.ncifcrf.gov/" target="_blank">DAVID</a>. Following terms are supported:
       <dl class="dl-horizontal">
         <dt>GO</dt>
         <dd>Enrichment for Gene Ontology.</dd>
